<resources>
    <string name="app_name">firebase</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ingrese_su_contrase_a">Ingrese su contraseña</string>
    <string name="log_in">log in</string>
    <string name="register">register</string>
    <string name="ingrese_su_email">Ingrese su email</string>
    <string name="populars">Populars</string>
    <string name="now_playing">Now Playing</string>
    <string name="top_rated">Top Rated</string>
    <string name="fondo">fondo</string>
    <string name="textview">TextView</string>
    <string name="poster">poster</string>
    <string name="profile">Profile</string>
    <string name="username">USERNAME</string>
</resources>